--- a/Project_Part_1_Coding_Dojo_PH.ipynb
+++ b/Project_Part_1_Coding_Dojo_PH.ipynb
@@ -6,7 +6,7 @@
       "name": "Project Part 1  Coding Dojo PH.ipynb",
       "provenance": [],
       "mount_file_id": "13EfhOirdk4n_KuqMTlDFR4uDeJJKYV_g",
-      "authorship_tag": "ABX9TyMhZp/OGRkykxIz0FzHkJjj",
+      "authorship_tag": "ABX9TyMWOchUnz7RIv198qBher5R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 51,
       "metadata": {
         "id": "AI-O_iDks3LM"
       },
@@ -53,9 +53,9 @@
           "height": 206
         },
         "id": "RVUYz1Je0ayR",
-        "outputId": "7c1b810e-cfc2-4c4d-8a3e-0b1dfa33c3e8"
+        "outputId": "9cde1f0f-4473-4c61-83c5-902b9ee96856"
       },
-      "execution_count": 47,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,7 +70,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-08a8d8c1-a0ed-4216-8b27-86c902a90e3d\">\n",
+              "  <div id=\"df-7fac7164-64c0-4a9f-b41d-803394d95cbf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -135,7 +135,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-08a8d8c1-a0ed-4216-8b27-86c902a90e3d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7fac7164-64c0-4a9f-b41d-803394d95cbf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -186,12 +186,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-08a8d8c1-a0ed-4216-8b27-86c902a90e3d button.colab-df-convert');\n",
+              "          document.querySelector('#df-7fac7164-64c0-4a9f-b41d-803394d95cbf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-08a8d8c1-a0ed-4216-8b27-86c902a90e3d');\n",
+              "          const element = document.querySelector('#df-7fac7164-64c0-4a9f-b41d-803394d95cbf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -214,7 +214,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 52
         }
       ]
     },
@@ -232,9 +232,9 @@
           "height": 206
         },
         "id": "O3Fy91Ro06Ow",
-        "outputId": "ad39f80e-39e6-4801-a54e-cd5cb2900671"
+        "outputId": "3765486e-5d28-4aa1-ce83-dd9fb664e1b0"
       },
-      "execution_count": 48,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,7 +263,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-615c7b69-071f-4a2b-b5e9-4b9444d839f1\">\n",
+              "  <div id=\"df-8e555a4e-622d-4400-afc0-87b0946e5cf5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -364,7 +364,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-615c7b69-071f-4a2b-b5e9-4b9444d839f1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e555a4e-622d-4400-afc0-87b0946e5cf5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -415,12 +415,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-615c7b69-071f-4a2b-b5e9-4b9444d839f1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8e555a4e-622d-4400-afc0-87b0946e5cf5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-615c7b69-071f-4a2b-b5e9-4b9444d839f1');\n",
+              "          const element = document.querySelector('#df-8e555a4e-622d-4400-afc0-87b0946e5cf5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -443,7 +443,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 53
         }
       ]
     },
@@ -460,9 +460,9 @@
           "height": 206
         },
         "id": "ydSMkIPf1nyX",
-        "outputId": "fb98aeb5-b752-4475-88fb-50c2a1386ed9"
+        "outputId": "5c0db73d-e6d0-41e5-8286-d69ac43ea34f"
       },
-      "execution_count": 49,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +477,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1ff2c066-c3a9-4a28-bdba-a93c860e4cfb\">\n",
+              "  <div id=\"df-aa163be8-0d93-4da4-897f-171b6b2392f3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -542,7 +542,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ff2c066-c3a9-4a28-bdba-a93c860e4cfb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aa163be8-0d93-4da4-897f-171b6b2392f3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -593,12 +593,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1ff2c066-c3a9-4a28-bdba-a93c860e4cfb button.colab-df-convert');\n",
+              "          document.querySelector('#df-aa163be8-0d93-4da4-897f-171b6b2392f3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1ff2c066-c3a9-4a28-bdba-a93c860e4cfb');\n",
+              "          const element = document.querySelector('#df-aa163be8-0d93-4da4-897f-171b6b2392f3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -621,7 +621,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 54
         }
       ]
     },
@@ -631,7 +631,7 @@
         "#loading Sales Prediction CSV\n",
         "github = \"/content/sales_predictions.csv\"\n",
         "dfgit = pd.read_csv(github)\n",
-        "df.head()"
+        "dfgit.head()"
       ],
       "metadata": {
         "colab": {
@@ -639,24 +639,45 @@
           "height": 206
         },
         "id": "MHuzNTTb4BlM",
-        "outputId": "86c17f45-7ca7-4653-a92a-28cf4538ae07"
+        "outputId": "037f66bb-57ea-4471-c74a-aeb47df9f0c0"
       },
-      "execution_count": 50,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      RM  LSTAT  PTRATIO  target\n",
-              "0  6.575   4.98     15.3    24.0\n",
-              "1  6.421   9.14     17.8    21.6\n",
-              "2  7.185   4.03     17.8    34.7\n",
-              "3  6.998   2.94     18.7    33.4\n",
-              "4  7.147   5.33     18.7    36.2"
+              "  Item_Identifier  Item_Weight Item_Fat_Content  Item_Visibility  \\\n",
+              "0           FDA15         9.30          Low Fat         0.016047   \n",
+              "1           DRC01         5.92          Regular         0.019278   \n",
+              "2           FDN15        17.50          Low Fat         0.016760   \n",
+              "3           FDX07        19.20          Regular         0.000000   \n",
+              "4           NCD19         8.93          Low Fat         0.000000   \n",
+              "\n",
+              "               Item_Type  Item_MRP Outlet_Identifier  \\\n",
+              "0                  Dairy  249.8092            OUT049   \n",
+              "1            Soft Drinks   48.2692            OUT018   \n",
+              "2                   Meat  141.6180            OUT049   \n",
+              "3  Fruits and Vegetables  182.0950            OUT010   \n",
+              "4              Household   53.8614            OUT013   \n",
+              "\n",
+              "   Outlet_Establishment_Year Outlet_Size Outlet_Location_Type  \\\n",
+              "0                       1999      Medium               Tier 1   \n",
+              "1                       2009      Medium               Tier 3   \n",
+              "2                       1999      Medium               Tier 1   \n",
+              "3                       1998         NaN               Tier 3   \n",
+              "4                       1987        High               Tier 3   \n",
+              "\n",
+              "         Outlet_Type  Item_Outlet_Sales  \n",
+              "0  Supermarket Type1          3735.1380  \n",
+              "1  Supermarket Type2           443.4228  \n",
+              "2  Supermarket Type1          2097.2700  \n",
+              "3      Grocery Store           732.3800  \n",
+              "4  Supermarket Type1           994.7052  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c128426a-d532-4eaa-9b1e-421e7c1820e0\">\n",
+              "  <div id=\"df-8f28f9e6-927c-4bfd-8dcb-6e2d1f23d8e5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -676,52 +697,100 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>RM</th>\n",
-              "      <th>LSTAT</th>\n",
-              "      <th>PTRATIO</th>\n",
-              "      <th>target</th>\n",
+              "      <th>Item_Identifier</th>\n",
+              "      <th>Item_Weight</th>\n",
+              "      <th>Item_Fat_Content</th>\n",
+              "      <th>Item_Visibility</th>\n",
+              "      <th>Item_Type</th>\n",
+              "      <th>Item_MRP</th>\n",
+              "      <th>Outlet_Identifier</th>\n",
+              "      <th>Outlet_Establishment_Year</th>\n",
+              "      <th>Outlet_Size</th>\n",
+              "      <th>Outlet_Location_Type</th>\n",
+              "      <th>Outlet_Type</th>\n",
+              "      <th>Item_Outlet_Sales</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>6.575</td>\n",
-              "      <td>4.98</td>\n",
-              "      <td>15.3</td>\n",
-              "      <td>24.0</td>\n",
+              "      <td>FDA15</td>\n",
+              "      <td>9.30</td>\n",
+              "      <td>Low Fat</td>\n",
+              "      <td>0.016047</td>\n",
+              "      <td>Dairy</td>\n",
+              "      <td>249.8092</td>\n",
+              "      <td>OUT049</td>\n",
+              "      <td>1999</td>\n",
+              "      <td>Medium</td>\n",
+              "      <td>Tier 1</td>\n",
+              "      <td>Supermarket Type1</td>\n",
+              "      <td>3735.1380</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>6.421</td>\n",
-              "      <td>9.14</td>\n",
-              "      <td>17.8</td>\n",
-              "      <td>21.6</td>\n",
+              "      <td>DRC01</td>\n",
+              "      <td>5.92</td>\n",
+              "      <td>Regular</td>\n",
+              "      <td>0.019278</td>\n",
+              "      <td>Soft Drinks</td>\n",
+              "      <td>48.2692</td>\n",
+              "      <td>OUT018</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>Medium</td>\n",
+              "      <td>Tier 3</td>\n",
+              "      <td>Supermarket Type2</td>\n",
+              "      <td>443.4228</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>7.185</td>\n",
-              "      <td>4.03</td>\n",
-              "      <td>17.8</td>\n",
-              "      <td>34.7</td>\n",
+              "      <td>FDN15</td>\n",
+              "      <td>17.50</td>\n",
+              "      <td>Low Fat</td>\n",
+              "      <td>0.016760</td>\n",
+              "      <td>Meat</td>\n",
+              "      <td>141.6180</td>\n",
+              "      <td>OUT049</td>\n",
+              "      <td>1999</td>\n",
+              "      <td>Medium</td>\n",
+              "      <td>Tier 1</td>\n",
+              "      <td>Supermarket Type1</td>\n",
+              "      <td>2097.2700</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>6.998</td>\n",
-              "      <td>2.94</td>\n",
-              "      <td>18.7</td>\n",
-              "      <td>33.4</td>\n",
+              "      <td>FDX07</td>\n",
+              "      <td>19.20</td>\n",
+              "      <td>Regular</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>Fruits and Vegetables</td>\n",
+              "      <td>182.0950</td>\n",
+              "      <td>OUT010</td>\n",
+              "      <td>1998</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Tier 3</td>\n",
+              "      <td>Grocery Store</td>\n",
+              "      <td>732.3800</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>7.147</td>\n",
-              "      <td>5.33</td>\n",
-              "      <td>18.7</td>\n",
-              "      <td>36.2</td>\n",
+              "      <td>NCD19</td>\n",
+              "      <td>8.93</td>\n",
+              "      <td>Low Fat</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>Household</td>\n",
+              "      <td>53.8614</td>\n",
+              "      <td>OUT013</td>\n",
+              "      <td>1987</td>\n",
+              "      <td>High</td>\n",
+              "      <td>Tier 3</td>\n",
+              "      <td>Supermarket Type1</td>\n",
+              "      <td>994.7052</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c128426a-d532-4eaa-9b1e-421e7c1820e0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8f28f9e6-927c-4bfd-8dcb-6e2d1f23d8e5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -772,12 +841,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c128426a-d532-4eaa-9b1e-421e7c1820e0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8f28f9e6-927c-4bfd-8dcb-6e2d1f23d8e5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c128426a-d532-4eaa-9b1e-421e7c1820e0');\n",
+              "          const element = document.querySelector('#df-8f28f9e6-927c-4bfd-8dcb-6e2d1f23d8e5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -800,7 +869,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 55
         }
       ]
     }
